# pdftutor

./: .replit  app.py  gunicorn.conf.py  pyproject.toml  replit.md  start_optimized.sh
attached_assets/: Pasted-Develop-a-Python-Flask-web-app-that-renders-a-PDF-as-a-mobile-style-interactive-tutorial-The-app-mu-1755880277210_1755880277210.txt
static/: sw.js
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
